linkei com outra página html que contém uma checkList de staff members

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <h2>Total de dias a dividir: <span id="totalDaysDisplay"></span></h2>
       <button id="concludeBtn">Concluir</button>
     </footer>
+    <a href="https://pauloldsouza.github.io/StaffDuque/" target="_blank"
+      >Lista de pessoas</a
+    >
     <script src="index.js"></script>
   </body>
 </html>
